fix bug where .form-card width wasn't 100% on mobile breakpoint

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,8 +152,7 @@ input[type="text"], input[type="password"] {
     background-color: white;
     border-radius: 1em;
     margin: 0.50em;
-    width: 30%;
-    max-width: 30%;
+    width: 100%;
     padding: 0.25em 1em 0.25em 1em;
     box-shadow: 0px 5px 10px lightgrey;
 }
@@ -225,7 +224,11 @@ input[type="text"], input[type="password"] {
     }
 
     /*body{color: green;}*/
-    .form-card {margin-top: 2em;}
+    .form-card {
+        margin-top: 2em;
+        width: 30%;
+        max-width: 30%;
+    }
 
     #searchButtonsContainer {
         display: flex;
